cmake_minimum_required(VERSION 3.0.0)
project(AlgorithmDataStructure)

# C++20
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
message(STATUS "CMAKE_CXX_STANDARD: ${CMAKE_CXX_STANDARD}")

add_subdirectory(practice)
add_subdirectory(ch2_order)
add_subdirectory(ch3_all_search)
add_subdirectory(ch4_recursion_and_divide_and_conquer_method)
add_subdirectory(ch5_dynamic_programming)
add_subdirectory(ch6_binary_search)
add_subdirectory(ch7_greedy_algorithm)
add_subdirectory(ch8_data_structure)
add_subdirectory(ch9_stack_queue)
add_subdirectory(ch10_graph_tree)
add_subdirectory(ch11_union_find)
add_subdirectory(ch12_sort)
add_subdirectory(ch13_graph_search)
add_subdirectory(ch14_graph_shortest_path)
add_subdirectory(ch15_graph_min_spanning_tree)
add_subdirectory(ch16_graph_network_flow)